correção de substituição de ShoppingCartProduct